# wallet-mcp

./: .env  .env.example  Cargo.toml  Makefile  README.md  README_CHAINLINK_TEST.md  README_MCP_CONFIG.md  README_SWAP_TEST.md  claude_desktop_config.json  mcp-config.json  setup.sh  state.json  xxx.md
scripts/: setup_anvil_accounts.sh
src/: constants.rs  lib.rs  main.rs  mcp.rs  server.rs  sol.rs  types.rs  wallet.rs
src/abi/: ISwapRouter.json
src/handlers/: balance_handler.rs  mod.rs  price_handler.rs  swap_handler.rs
src/models/: constants.rs  mod.rs  sol.rs  types.rs
src/services/: wallet_service.rs
tests/: balance_tests.rs  price_tests.rs  swap_tests.rs
tests/common/: mod.rs
