[package]
name = "wallet-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
alloy = { version = "1.0.38", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
serde_json = "1.0.145"
