[package]
name = "wallet-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet-mcp"
path = "src/main.rs"

[[example]]
name = "chainlink_test"
path = "examples/chainlink_test.rs"

[[example]]
name = "swap_test"
path = "examples/swap_test.rs"

[[example]]
name = "simple_swap_test"
path = "examples/simple_swap_test.rs"

[[example]]
name = "local_test"
path = "examples/local_test.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
alloy = { version = "1.0.38", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
serde_json = "1.0.145"
async-trait = "0.1.89"
