[package]
name = "wallet-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet-mcp"
path = "src/main.rs"

# 示例程序
# [[example]]
# name = "chainlink_test"
# path = "examples/chainlink_test.rs"

# [[example]]
# name = "swap_test"
# path = "examples/swap_test.rs"

# [[example]]
# name = "simple_swap_test"
# path = "examples/simple_swap_test.rs"

# [[example]]
# name = "local_test"
# path = "examples/local_test.rs"

[lib]
name = "wallet_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features=[    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars"]}
serde = { version = "1.0.228", features = ["derive"] }
alloy = { version = "1.0.38", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
serde_json = "1.0.145"
async-trait = "0.1.89"
axum = "0.8.6"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing = "0.1.41"
futures = "0.3.31"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
